helloworld.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-v1-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld-v1
    spec:
      containers:
      - name: basicwebapp
        image: buildmystartup/basicwebapp
        ports:
        - name: http-port
          containerPort: 80
