helloworld-v1.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-v1-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld-v1
    spec:
      containers:
      - name: basicwebapp 
        image: buildmystartup/basicwebapp 
        ports:
        - name: http-port
          containerPort: 80 
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30303
    targetPort: 80 
    protocol: TCP
    name: http
  selector:
    app: helloworld-v1
