helloworld-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: helloworld 
  namespace: default
spec:
  tls:
  - secretName: helloworld-tls-prod
    hosts:
    - helloworld-v1.ghettolabs.io
    - helloworld-v2.ghettolabs.io
  rules:
    - host: helloworld-v1.ghettolabs.io 
      http:
        paths:
          - backend:
              serviceName: helloworld-v1 
              servicePort: 80 
            path: /
    - host: helloworld-v2.ghettolabs.io 
      http:
        paths:
          - backend:
              serviceName: helloworld-v2 
              servicePort: 80 
            path: /
